Update 퍼블리싱 수정
- 소셜아이콘 퍼블리싱 수정
- 커뮤니티 로그인 퍼블리싱 수정

--- a/views/member/bottom_right_main.ejs
+++ b/views/member/bottom_right_main.ejs
@@ -18,7 +18,7 @@
 <!-- UI 변경시 padding-top 제거 -->
 <div class="box3" style="padding-top: 40px;">
 	<h4 style="font-weight:  bold;">바로 접속/참여 하기</h4>
-	<p>방이름을 입력하여 개설 또는 참여하세요</p>
+	<p style="font-size: .8rem;">방이름을 입력하여 개설 또는 참여하세요</p>
 </div>
 
 <div class="box2" style="display: none;">
