--- a/public/css/index.css
+++ b/public/css/index.css
@@ -276,7 +276,10 @@ video {
 
 .loginBtnDiv {
 	display: flex;
-	margin: 10px 0;
+	margin: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	max-width: 360px;
 }
 .loginBtnDiv div { 
 	max-width: 20%; 
