--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,7 +147,7 @@
 					<p><span>고객센터</span><br>
 					Tel : 02-2039-3977<br>
 					Fax : 02-2039-3978<br>
-					E-mail : hji@invesume.com</p>
+					E-mail : servicedesk@invesume.com</p>
 				</div>
 			</div>
 			
