Update 채팅시 css수정
- 채팅시 영상과 채팅의 백그라운드가 구별되지 않아 border-left로 라인으로 구분하는 방식으로 수정

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -396,6 +396,7 @@ video {
 
 #chat-container {
 	background-color: #f2f2f2;
+  	border-left: 1px solid #13AFA5;
 	display: inline-block;
 	/* min-width: 320px; */
 	overflow: hidden;
