Update text update
- 기존 텍스트를 하모니아 미디어 위버 로 변경

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,7 +98,7 @@
 				<div class="bottom_left miniSize" style="overflow: hidden;">
 					<h3>Hamonia Media<br>Weaver</h3>
 					<img alt="" src="/img/camera_bg.png">
-					<p>하모니위버로<br> 전 세계와 소통해 보세요.</p>
+					<p>하모니아 미디어 위버로<br> 전 세계와 소통해 보세요.</p>
 				</div>
 				
 				<div style="width: 1%;"></div>
