--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,7 @@
 				<div class="intro_right col-md-8">
 					<img src="/img/intro_head.png" alt="HAMONIA 화면너머의 사람들과 만나는 시간">
 					<p class="intro_text">하모니아(HamoniA)는  별도의 엑티브엑스의 설치없이 웹 브라우저로 언제 어디에서나 인터넷만 연결되어 있으면  기업회의, 상담, 세미나 등  음성 및 영상의 정보를 다자간 실시간으로  커뮤니케이션을  즐길 수  있는 서비스 입니다. </p>
-					<p class="intro_text">웹브라우저에서 www.hamonia.kr 접속하여 사용할 수 있습니다. 그룹웨어, 사내 포털 시스템 등에  Hamonia 배너를 삽입하여 영상커뮤니케이션을  할 수  있습니다.</p>
+					<p class="intro_text">웹브라우저에서 hamonia.kr 접속하여 사용할 수 있습니다. 그룹웨어, 사내 포털 시스템 등에  Hamonia 배너를 삽입하여 영상커뮤니케이션을  할 수  있습니다.</p>
 					<p class="intro_btn"><a href="javascript:alert('연락처 : 02-2039-3977');">문의하기</a></p>
 				</div>
 			</div>
