--- a/views/index.ejs
+++ b/views/index.ejs
@@ -179,6 +179,23 @@
 					<span class="ripple" style="height: 56px; width: 56px; top: 13px; left: 13px;"></span>
 				</button>
 				
+				<!-- 채팅 open/close -->
+				<button class="btn btn--xl btn--green btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
+					<div class="msgCntDiv" style="display: none;">
+						<span>0</span>
+					</div>
+					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
+				</button>
+				
+				<!-- 영상 -->
+				<!--
+				<button class="btn btn--xl btn--blue btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
+				</button>
+				-->
+			</div>
+			
+			<div class="menuLineDiv">
 				<!-- 전체화면 -->
 				<!-- 
 				<button class="mobNone btn btn--xl btn--green btn--fab mdi md-fullscreen" onclick="goFullscreen(this)" title="Full screen" style="position: relative; overflow: hidden; font-size: 1.9rem;">
@@ -187,35 +204,20 @@
 				-->
 				
 				<!-- 마이크 버튼 -->
-				<button class="btn btn--xl btn--green btn--fab mdi md-mic buttonMic" title="마이크 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--indigo btn--fab mdi md-mic buttonMic" title="마이크 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				
 				<!-- 음소거 버튼 -->
 				<!--
-				<button class="btn btn--xl btn--teal btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" data-value="ture" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--deep-purple btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" data-value="ture" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				-->
 				
 				<!-- 카메라 버튼 -->
-				<button class="btn btn--xl btn--blue btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--purple btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-			</div>
-			
-			<div class="menuLineDiv">
-				<!-- 채팅 open/close -->
-				<button class="btn btn--xl btn--indigo btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
-					<div class="msgCntDiv" style="display: none;">
-						<span>0</span>
-					</div>
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				
-				<!-- 영상 -->
-				<button class="btn btn--xl btn--purple btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
 				</button>
 			</div>
 			
