Update 스피커 버튼
- 영상통화 음성을 켜고 끌 수 있는 음소거 기능 입니다.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -208,12 +208,10 @@
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				
-				<!-- 음소거 버튼 -->
-				<!--
+				<!-- 스피커 버튼 -->
 				<button class="btn btn--xl btn--deep-purple btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" data-value="ture" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
-				-->
 				
 				<!-- 카메라 버튼 -->
 				<button class="btn btn--xl btn--purple btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
@@ -378,15 +376,13 @@
 				<p>내 마이크 사용유무를 선택합니다.<br/>중지하면 상대방에게 소리를 전송하지 않습니다.</p>
 			</div>
 			
-			<!-- 음소거 버튼 -->
-			<!--
+			<!-- 스피커 버튼 -->
 			<div class="btnInfoDiv">
 				<button class="btn btn--xl btn--teal btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				<p>모든 영상통화 소리를 음소거 합니다.</p>
 			</div>
-			-->
 			
 			<!-- 카메라 버튼 -->
 			<div class="btnInfoDiv">
