Update 버튼 설명 변경
- 변경된 UI에 따른 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -368,17 +368,41 @@
 				<p>사용자 초대 링크를 받을 수 있습니다.<br/>해당 주소를 공유하여 영상통화를 함께 할 수 있습니다.</p>
 			</div>
 			
+			<!-- 채팅 open/close -->
+			<div class="btnInfoDiv">
+				<button class="btn btn--xl btn--green btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
+				</button>
+				<p>다른 사용자가 접속하면<br/>채팅창을 열 수 있습니다.</p>
+			</div>
+			
+			<!-- 화이트보드 open/close -->
+			<div class="btnInfoDiv">
+				<button class="btn btn--xl btn--teal btn--fab mdi md-create boardBtn" title="화이트보드" style="position: relative; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
+				</button>
+				<p>다른 사용자가 접속하면<br/>화이트보드창을 열 수 있습니다.</p>
+			</div>
+			
+			<!-- 영상 -->
+			<div class="btnInfoDiv">
+				<button class="btn btn--xl btn--blue btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
+				</button>
+				<p>영상만 나오는 화면으로 변경합니다.</p>
+			</div>
+			
 			<!-- 마이크 버튼 -->
 			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--green btn--fab mdi md-mic buttonMic" title="마이크 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--indigo btn--fab mdi md-mic buttonMic" title="마이크 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				<p>내 마이크 사용유무를 선택합니다.<br/>중지하면 상대방에게 소리를 전송하지 않습니다.</p>
 			</div>
 			
-			<!-- 스피커 버튼 -->
+			<!-- 음소거 버튼 -->
 			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--teal btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--deep-purple btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				<p>모든 영상통화 소리를 음소거 합니다.</p>
@@ -386,26 +410,10 @@
 			
 			<!-- 카메라 버튼 -->
 			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--blue btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--purple btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				<p>내 영상화면을 끕니다.<br/>다른 사람들도 볼 수 없습니다.</p>
-			</div>
-			
-			<!-- 채팅 open/close -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--indigo btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				<p>다른 사용자가 접속하면<br/>채팅창을 열 수 있습니다.</p>
-			</div>
-			
-			<!-- 영상 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--purple btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				<p>영상만 나오는 화면으로 변경합니다.</p>
 			</div>
 		</div>
 		
