--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,13 +45,7 @@
 	
 	<!-- 확인을 위해 script src="/dist/RTCMultiConnection.min.js"></script -->
 	<script src="/dist/RTCMultiConnection.js"></script>
-	<script src="/dev/adapter.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-
-	<!-- custom layout for HTML5 audio/video elements -->
-	<link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
-	<script src="/dev/getHTMLMediaElement.js"></script>
-	<script src="/dev/FileBufferReader.js"></script>
 	
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -64,19 +58,6 @@
 		gtag('config', 'UA-119868541-1');
 	</script>
 </head>
-
-<script type="text/javascript">
-	function psycareFnt(){
-		if( '<%= roomID %>') document.getElementById('room-id').value = '<%= roomID %>';
-		if( '<%= userName %>') document.getElementById('userName').value = '<%= userName %>';
-		if( '<%= psycare %>') document.getElementById('psycare').value = '<%= psycare %>';
-		
-		if( document.getElementById('room-id').value.length != 0 && document.getElementById('psycare').value == 'psycare' ){
-			$('#open-or-join-room').trigger('click');
-		}
-	}
-</script>
-
 
 <body id="page-top">
 	
@@ -102,8 +83,6 @@
 				</div>
 				
 				<div style="width: 1%;"></div>
-				
-				<input type="hidden" id="psycare" name="psycare">
 				
 				<div class="bottom_right"></div>
 		    </div>
@@ -156,292 +135,9 @@
 		<!-- footer content -->
 	</div>
 	<!-- main page end -->
-	
-	
-	
-	<!-- room page start -->
-	<div id="joinRoom" style="display: none;">
-		<!-- 로고 -->
-		<div id="logo">
-			<img src="/img/logo.png">
-		</div>
-		
-		<!-- 메뉴 -->
-		<div id="menuDiv">
-			<div class="menuLineDiv">
-				<!-- 나가기 -->
-				<button class="btn btn--xl btn--red btn--fab mdi md-exit-to-app" id="btn-leave-room" data-value="false" title="나가기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
-				</button>
-				
-				<!-- 초대 -->
-				<button class="btn btn--xl btn--pink btn--fab mdi md-person-add" id="invite" title="초대" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 13px; left: 13px;"></span>
-				</button>
-				
-				<!-- 채팅 open/close -->
-				<button class="btn btn--xl btn--green btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
-					<div class="msgCntDiv" style="display: none;">
-						<span>0</span>
-					</div>
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				
-				<!-- 영상 -->
-				<!--
-				<button class="btn btn--xl btn--blue btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				-->
-			</div>
-			
-			<div class="menuLineDiv">
-				<!-- 전체화면 -->
-				<!-- 
-				<button class="mobNone btn btn--xl btn--green btn--fab mdi md-fullscreen" onclick="goFullscreen(this)" title="Full screen" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-				-->
-				
-				<!-- 마이크 버튼 -->
-				<button class="btn btn--xl btn--indigo btn--fab mdi md-mic buttonMic" title="마이크 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-				
-				<!-- 스피커 버튼 -->
-				<button class="btn btn--xl btn--deep-purple btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" data-value="ture" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-				
-				<!-- 카메라 버튼 -->
-				<button class="btn btn--xl btn--purple btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-			</div>
-			
-			<div class="menuLineDiv">
-				<!-- 메뉴 -->
-				<button class="btn btn--xl btn--orange btn--fab mdi md-menu allManu" id="menuBtn" data-value="false" style="position: relative; font-size: 1.9rem;">
-					<div class="newInfoDiv" style="display: none;">
-						<span>N</span>
-					</div>
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-			</div>
-		</div>
-		
-		<!-- 영상 -->
-		<div id="videos-container"></div>
-		
-		<div id="room-urls" style="text-align: center;display: none;background: #F1EDED;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
-		
-		<!-- 화이트보드 -->
-		<div id="whiteBoardDiv" data-value="false">
-			<div class="boardLeftDiv">
-				<!-- 화이트보드 파일 업로드창 -->
-				<div class="center">
-					<div class="profile">
-						<span class="parameter" id="pdfName">선택된 파일이<br/>없습니다.</span>
-						
-						<div class="actions">
-							<a href="javascript:;" class="btn file" disabled>파일선택
-								<input id='pdf' type='file' data-value="true" accept="application/pdf" style="height: 100%; width: 100%;" disabled>
-							</a>
-							<div class="job">파일 크기 : <span class="parameter" id="sizeText">0</span> / 10Mb</div>
-						</div>
-					</div>
-				</div>
-				
-				<div id="imgDiv"></div>
-				
-				<!-- progres -->
-				<div id="imgProgressDiv" style="display: none;">
-					<div class="row">
-			            <div id="loading">
-			                <ul class="bokeh">
-			                    <li></li>
-			                    <li></li>
-			                    <li></li>
-			                    <li></li>
-			                </ul>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-			
-			<div id="whiteBoardLayer">
-				<div id="boardProgress">
-					<div class="row">
-						<div id="loading">
-							<ul class="bokeh">
-							    <li></li>
-							    <li></li>
-							    <li></li>
-							    <li></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		
-		<!-- 채팅 -->
-		<div id="chat-container" data-value="false">
-			
-			<!-- 파일공유 -->
-			<button class="btn btn--xl btn--purple btn--fab mdi md-file-upload" id="share-file" title="종료" disabled style="position: relative; overflow: hidden; font-size: 1.9rem;">
-				<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
-			</button>
-			
-			<!-- 파일 -->
-		    <div id="file-container"></div>
-		    
-		    
-		    <!-- 채팅내용 -->
-		    <ul class="chat-output"></ul>
-		    
-		    <!-- 전송 -->
-			<div class="textInputDiv row">
-				<select id="transValue" class="form-control">
-					<option value="nonTrans">선택</option>
-					<option value="ko//en">한>영</option>
-					<option value="en//ko">En>Ko</option>
-				</select>
-				
-				<input type="text" id="input-text-chat" disabled autocomplete="off">
-				
-				<button class="btn btn--xl btn--red btn--fab mdi md-send" id="messageSendBtn" title="전송" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
-				</button>
-			</div>
-		</div>
-		
-	</div>
-	
-	
-	<!-- 팝업용 백그라운드 -->
-	<div id="mask" style="display: none; opacity: .7; z-index: 5;">
-		<!-- <img alt="Loading" src="/img/spinner.gif"> -->
-	</div>
-	
-	<!-- 초대창 -->
-	<div id="inviteAlert" class="alertDiv" data-value="false">
-		<div class="alertTitle">사용자 초대</div>
-		
-		<div class="alertContent">
-			<div class="alertAlarm">▷  링크 복사로 초대를 하실 수 있습니다.</div>
-			<div class="alertTableDiv">
-				<a href="javascript:;" class="clipboardBtn">
-					<span id="inviteUrl"></span>
-				</a>
-				<input id="clip_target" type="text" value="" style="position:absolute;top:-9999em;"/>
-			</div>
-		</div>
-		
-		<div class="alertBtnDiv">
-			<a href="javascript:;" id="text_c_enter" class="btn">링크복사</a>
-			<span>&nbsp;</span>
-			<input type="button" id="inviteAlertNoBtn" class="btn" value="닫기">
-		</div>
-	</div>
-	
-	<!-- 버튼설명 -->
-	<div id="buttonInfoAlert">
-		<div class="btnInfoTop">사용설명</div>
-		
-		<div class="btnInfoContent">
-			<!-- 나가기 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--red btn--fab mdi md-exit-to-app" id="btn-leave-room" data-value="false" title="나가기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
-				</button>
-				<p>영상통화를 종료합니다.<br/>방장이 종료한 경우 모든 영상통화가 종료됩니다.</p>
-			</div>
-			
-			<!-- 초대 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--pink btn--fab mdi md-person-add" id="invite" title="초대" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 13px; left: 13px;"></span>
-				</button>
-				<p>사용자 초대 링크를 받을 수 있습니다.<br/>해당 주소를 공유하여 영상통화를 함께 할 수 있습니다.</p>
-			</div>
-			
-			<!-- 채팅 open/close -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--green btn--fab mdi md-chat chatBtn" title="채팅" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				<p>다른 사용자가 접속하면<br/>채팅창을 열 수 있습니다.</p>
-			</div>
-			
-			<!-- 화이트보드 open/close -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--teal btn--fab mdi md-create boardBtn" title="화이트보드" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				<p>다른 사용자가 접속하면<br/>화이트보드창을 열 수 있습니다.</p>
-			</div>
-			
-			<!-- 영상 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--blue btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
-				</button>
-				<p>영상만 나오는 화면으로 변경합니다.</p>
-			</div>
-			
-			<!-- 마이크 버튼 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--indigo btn--fab mdi md-mic buttonMic" title="마이크 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-				<p>내 마이크 사용유무를 선택합니다.<br/>중지하면 상대방에게 소리를 전송하지 않습니다.</p>
-			</div>
-			
-			<!-- 음소거 버튼 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--deep-purple btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-				<p>모든 영상통화 소리를 음소거 합니다.</p>
-			</div>
-			
-			<!-- 카메라 버튼 -->
-			<div class="btnInfoDiv">
-				<button class="btn btn--xl btn--purple btn--fab mdi md-videocam buttonVideo" title="카메라 끄기" style="position: relative; overflow: hidden; font-size: 1.9rem;">
-					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				</button>
-				<p>내 영상화면을 끕니다.<br/>다른 사람들도 볼 수 없습니다.</p>
-			</div>
-		</div>
-		
-		<div class="blind"></div>
-		
-		<div class="btnInfoBottom">
-			<p class="btnInfoText">※ 해당 메뉴는 화면 우측 상단에 있습니다.</p>
-			
-			<label>
-				<input type="checkbox" class="btnInfoNot">
-				<span>그만보기</span>
-			</label>
-			
-			<br/>
-			
-			<input type="button" class="btn closeBtn" value="닫기">
-		</div>
-	</div>
-	<!-- room page end -->
-
 	<script type="text/javascript" src="/js/index.js"></script>
-	<script type="text/javascript" src="/js/index_room_view.js"></script>
 	<script src="https://cdn.webrtc-experiment.com/common.js"></script>
-
-	<script type="text/javascript" src="/js/jszip.min.js"></script>
-	<script type="text/javascript" src="/js/FileSaver.js"></script>
-	<script type="text/javascript" src="/js/pdf.js"></script>
-	<script type="text/javascript" src="/js/pdf.worker.js"></script>
-	<script type="text/javascript" src="/js/whiteboard.js"></script>
+	
+	<script>console.log('%cHELLO HAMONIA :)', 'color: #2BC1A4; font-size: 2rem; font-weight: bold');</script>
 </body>
 </html>
