Update 기능 제약 해제
-다른 사용자가 없어도 채팅 기능을 사용할 수 있도록 변경

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -176,8 +176,8 @@
 						<span class="parameter" id="pdfName">선택된 파일이<br/>없습니다.</span>
 						
 						<div class="actions">
-							<a href="javascript:;" class="btn file" disabled>파일선택
-								<input id='pdf' type='file' data-value="true" accept="application/pdf" style="height: 100%; width: 100%;" disabled>
+							<a href="javascript:;" class="btn file">파일선택
+								<input id='pdf' type='file' data-value="true" accept="application/pdf" style="height: 100%; width: 100%;">
 							</a>
 							<div class="job">파일 크기 : <span class="parameter" id="sizeText">0</span> / 10Mb</div>
 						</div>
@@ -242,7 +242,7 @@
 					<option value="en//ko">En>Ko</option>
 				</select>
 				
-				<input type="text" id="input-text-chat" disabled autocomplete="off">
+				<input type="text" id="input-text-chat" autocomplete="off">
 				
 				<button class="btn btn--xl btn--red btn--fab mdi md-send" id="messageSendBtn" title="전송" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
