--- a/views/room.ejs
+++ b/views/room.ejs
@@ -144,11 +144,9 @@
 				</button>
 				
 				<!-- 옵션 버튼 -->
-				<!--
 				<button class="btn btn--xl btn--purple btn--fab mdi md-settings buttonOption" title="카메라 변경" style="position: relative; overflow: hidden; font-size: 1.9rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
-				-->
 			</div>
 			
 			<div class="menuLineDiv">
@@ -361,6 +359,14 @@
 					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				</button>
 				<p>내 영상화면을 끕니다.<br/>다른 사람들도 볼 수 없습니다.</p>
+			</div>
+          	
+          	<!-- 옵션 버튼 -->
+			<div class="btnInfoDiv">
+				<button class="btn btn--xl btn--purple btn--fab mdi md-settings buttonOption" title="카메라 변경" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+					<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
+				</button>
+				<p>옵션을 조정합니다.</p>
 			</div>
 		</div>
 		
