update option window css

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -265,8 +265,9 @@
 				<span>카메라<span>
 				<select id="selectCamera"></select>
 			</div>
+            <br/>
 			<div>
-				<label>내 영상 좌우반전
+				<label style="margin-bottom: 0;">내 영상 좌우반전
 				<input type="checkbox" id="myVideoRotate" checked></label>
 			</div>
 		</div>
