Update 카카오톡 인앱 브라우저 사용시 알림
- 카카오톡 인앱 브라우저를 이용하여 접속시 사용가능한 브라우저를 알리도록 변경
- 기존 방 접속 후 사용가능한 브라우저 알림을 사이트 접속시, 방 접속 버튼 클릭시 알림으로 변경

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -135,6 +135,7 @@
 		<!-- footer content -->
 	</div>
 	<!-- main page end -->
+	<script type="text/javascript" src="/js/browserCheck.js"></script>
 	<script type="text/javascript" src="/js/index.js"></script>
 	<script src="https://cdn.webrtc-experiment.com/common.js"></script>
 	
