--- a/views/room.ejs
+++ b/views/room.ejs
@@ -388,6 +388,7 @@
 	</div>
 	<!-- room page end -->
 	
+	<script type="text/javascript" src="/js/browserCheck.js"></script>
 	<script type="text/javascript" src="/js/room.js"></script>
 	<script type="text/javascript" src="/js/index_room_view.js"></script>
 	<script src="https://cdn.webrtc-experiment.com/common.js"></script>
